# AiRobustnessTestingKit-AiR-TK-

./: .gitignore  .gitmodules  AUTHORS.md  CITATION.cff  LICENSE.md  README.md  attacks.py  cifar_data.py  environment.yml  helper_functions.py  helper_methods_FINAL.py  losses.py  losses_FINAL.py  pyproject.toml  testing_framework.py  train.py  train_va.py  va_epochs_set.py  va_epochs_set_FINAL.py  warmup_round.py  warmup_round_FINAL.py
attacks/: __init__.py  apgd.py  feature_attack.py  fgsm.py  pgd.py  utils.py
lib/: data.py  loss.py  util.py
lib/attack/: __init__.py  apgd.py  base.py  fgsm.py  pgd.py  util.py
lib/model/: __init__.py  resnet.py  wideresnet.py
models/: resnet.py  wideresnet.py
script/: adt_training.py  adversarial_training_toolkit  airtk  clean_training.py  custat_training.py  helper_functions.py  run_all.ps1  standardat_training.py  test.py  testing_framework.py  train.py  train_va.py  warmup_round.py
src/adversarial_training_toolkit/: __init__.py  data.py  helper_functions.py  loss.py  util.py
src/adversarial_training_toolkit/attack/: MAIR_attack.py  __init__.py  apgd.py  base.py  eotpgd.py  fgsm.py  pgd.py  util.py
src/adversarial_training_toolkit/attack/MAIR/: Disclaimer  (+3 more)
src/adversarial_training_toolkit/defense/: __init__.py
src/adversarial_training_toolkit/model/: __init__.py
src/airtk/: __init__.py  __main__.py  data.py  helper_functions.py  loss.py  util.py
src/airtk/attack/: __init__.py  apgd.py  base.py  fgsm.py  pgd.py  util.py
src/airtk/defense/: __init__.py
src/airtk/model/: __init__.py  resnet.py  wideresnet.py
(+141 files in other folders)
