[project]
name = "airtk"
version = "0.1"
authors = [
    { name = "Deirdre Jost", email = "jostdb@miamioh.edu" },
    { name = "Steven Chiacchira", email = "chiaccsa@miamioh.edu" },
    { name = "Aibak Aljadayah" }
]
description = "Comprehensive and simple framework for conducting AI robustness experiments"
readme = "README.md"
requires-python = "==3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Environment :: GPU :: NVIDIA CUDA :: 11.8"
]
dependencies = [
    "pytorch>=2.1.1",
    "networkx>=3.1",
    "pyyaml>=6.0.0",
    "huggingface-hub>=0.24.0"
]

[project.urls]
Homepage = "https://github.com/LAiSR-SK/AiRobustnessTestingKit-AiR-TK-"
Issues = "https://github.com/LAiSR-SK/AiRobustnessTestingKit-AiR-TK-/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [".conda", "submodules"]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
